potential alignment bg fix

--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,6 @@
 html {
   margin: 0;
   padding: 0;
-  height: 100%;
   background: linear-gradient(
     144deg,
     rgba(2, 0, 36, 1) 0%,
@@ -18,7 +17,6 @@ body {
   font-family: "League Spartan", sans-serif !important;
   padding: 0 16px;
   width: 100%;
-  min-height: 100vh;
   display: flex !important;
   flex-direction: column !important;
   justify-content: center !important;
@@ -67,18 +65,6 @@ h1#screenshotLogo span {
 
 .fade-in {
   animation: fadeIn 0.5s ease-out;
-}
-
-@keyframes gradient {
-  0% {
-    background-position: 0% 50%;
-  }
-  50% {
-    background-position: 100% 50%;
-  }
-  100% {
-    background-position: 0% 50%;
-  }
 }
 
 @keyframes swipeLeft {
@@ -134,7 +120,7 @@ a:hover {
 }
 
 .container {
-  min-height: calc(100vh - 3rem);
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
